url query 받는 부분 추가

--- a/FunctionList_Swift/FunctionList_Swift/FunctionList_Swift.entitlements
+++ b/FunctionList_Swift/FunctionList_Swift/FunctionList_Swift.entitlements
@@ -6,7 +6,7 @@
 	<array>
 		<string>applinks:hostingdemo-a9104.web.app/</string>
 		<string>applinks:*.hostingdemo-a9104.web.app/</string>
-		<string>applinks:*.alxxyeon.page.link/</string>
+		<string>applinks:*.lxxyeon.page.link/</string>
 	</array>
 </dict>
 </plist>
