--- a/FunctionList_Swift/Podfile
+++ b/FunctionList_Swift/Podfile
@@ -9,7 +9,7 @@ target 'FunctionList_Swift' do
 
 pod 'Firebase/Analytics'
 pod 'Firebase/Crashlytics'
-
+pod 'ReachabilitySwift'
 
 pod 'Firebase/DynamicLinks'
 
