--- a/FunctionList_Swift/FunctionList_Swift.xcodeproj/xcshareddata/xcschemes/FunctionList_Swift.xcscheme
+++ b/FunctionList_Swift/FunctionList_Swift.xcodeproj/xcshareddata/xcschemes/FunctionList_Swift.xcscheme
@@ -60,6 +60,12 @@
             ReferencedContainer = "container:FunctionList_Swift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
