--- a/FunctionList_Swift/FunctionList_Swift/FunctionList_Swift.entitlements
+++ b/FunctionList_Swift/FunctionList_Swift/FunctionList_Swift.entitlements
@@ -12,5 +12,9 @@
 		<string>applinks:*.hostingdemo-a9104.web.app/</string>
 		<string>applinks:*.lxxyeon.page.link/</string>
 	</array>
+	<key>com.apple.developer.nfc.readersession.formats</key>
+	<array>
+		<string>TAG</string>
+	</array>
 </dict>
 </plist>
